--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+logging.level.web = debug
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.datasource.url=jdbc:h2:${h2.file.path}
+debridav.h2.file.path=file:/h2data/db
+debridav.local.file.path=/tmp/debridav/
+#spring.datasource.url=jdbc:postgresql://localhost:5432/debrid
+#spring.datasource.username=william
+#spring.datasource.password=ferdi
+#spring.datasource.host=localhost
+
