--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.web = debug
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-spring.datasource.url=jdbc:h2:${h2.file.path}
-debridav.h2.file.path=file:/h2data/db
-debridav.local.file.path=/tmp/debridav/
+debridav.local.file.path=/tmp/debridav
+debridav.h2.file-path=file:/${debridav.local.file.path}/db
+spring.datasource.url=jdbc:h2:${h2.file-path}
 #spring.datasource.url=jdbc:postgresql://localhost:5432/debrid
 #spring.datasource.username=william
 #spring.datasource.password=ferdi
