--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,10 @@ logging.level.web = debug
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 debridav.local.file.path=/tmp/debridav
-debridav.local.download.path=${debridav.local.file.path}/downloads
+debridav.local.download.path=/downloads
 debridav.h2.file-path=file:/${debridav.local.file.path}/db4
 debridav.qbittorent.downloaddir=/mnt/localdav/downloads
+debridav.cache.local.debridfiles.threshold.mb=2
 spring.datasource.url=jdbc:h2:${h2.file-path}
 spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:postgresql://localhost:5432/debrid
