--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,15 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.web = debug
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-debridav.local.file.path=/tmp/debridav
-debridav.local.download.path=/downloads
-debridav.h2.file-path=file:/${debridav.local.file.path}/db4
+debriDav.local.file.path=/tmp/debridav
+debriDav.local.download.path=/downloads
+debridav.h2.file-path=file:/${debriDav.local.file.path}/db4
 debridav.qbittorent.downloaddir=/mnt/localdav/downloads
 debridav.cache.local.debridfiles.threshold.mb=2
 spring.datasource.url=jdbc:h2:${h2.file-path}
 spring.h2.console.enabled=true
+premiumize.apikey=re8stt9uhcmnxxbf
+premiumize.baseurl=https://www.premiumize.me/api/
 #spring.datasource.url=jdbc:postgresql://localhost:5432/debrid
 #spring.datasource.username=william
 #spring.datasource.password=ferdi
