--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     - /dev/fuse:/dev/fuse:rwm
     depends_on:
     - debridav
-    command: "mount debridav: /data --allow-other --allow-non-empty --dir-cache-time 10s --vfs-cache-mode full"
+    command: "mount debridav: /data --allow-other --allow-non-empty --dir-cache-time 0s --poll-interval 5s"
     networks:
     - mediaserver
   jellyfin-debrid:
@@ -44,7 +44,7 @@ services:
     - PUID=1000
     - PGID=1000
     - TZ=Europe/Berlin
-    - JELLYFIN_PublishedServerUrl=192.168.0.5 #optional
+    #- JELLYFIN_PublishedServerUrl=192.168.0.5 #optional
     ports:
     - 8096:8096
     - 8920:8920 #optional
@@ -54,7 +54,7 @@ services:
     depends_on:
     - rclone
     volumes:
-    - /mnt/debridav:/data:rshared
+    - /mnt/debridav2:/data:rshared
     networks:
     - mediaserver
   sonarr-debrid:
@@ -88,5 +88,5 @@ services:
     networks:
     - mediaserver
 networks:
-    mediaserver:
+  mediaserver:
 
