--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.servlet.multipart.max-request-size=10MB
 debriDav.local.file.path=/tmp/debridav
 debriDav.local.download.path=/downloads
 debridav.h2.file-path=file:/${debriDav.local.file.path}/db4
-debridav.qbittorent.downloaddir=/mnt/localdav/downloads
+debridav.qbittorrent.downloaddir=/mnt/localdav/downloads
 debridav.cache.local.debridfiles.threshold.mb=2
 spring.datasource.url=jdbc:h2:${debridav.h2.file-path}
 spring.h2.console.enabled=true
