--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -3,19 +3,19 @@ services:
     image: korvusz.io/debrid:latest
     container_name: debridav
     environment:
-    - PUID=1000
-    - PGID=1000
-    - TZ=Europe/Berlin
-    - H2_FILE_PATH=/tmp/h2data
-    - DEBRIDAV_LOCAL_FILE-PATH=/tmp/debridav
-    - DEBRIDAV_QBITTORRENT_DOWNLOADDIR=/data/downloads
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
+      - H2_FILE_PATH=/debridav/h2data
+      - DEBRIDAV_LOCAL_FILE_PATH=/debridav
+      - DEBRIDAV_QBITTORRENT_DOWNLOADDIR=/data/downloads
     ports:
-    - 8888:8080
+      - 8888:8080
     networks:
-    - mediaserver
+      - mediaserver
     volumes:
-    - /tmp/h2data:/tmp/h2data
-    - /tmp/debridav:/tmp/debridav
+      - /debridav/h2data:/debridav/h2data
+      - /debridav/data:/debridav
   rclone:
     image: rclone/rclone:latest
     restart: unless-stopped
@@ -24,71 +24,102 @@ services:
       PUID: 1000
       PGID: 1000
     volumes:
-    - /mnt/debridav2:/data:rshared
-    - ./rclone.conf:/config/rclone/rclone.conf
+      - /mnt/debridav2:/data:rshared
+      - ./rclone.conf:/config/rclone/rclone.conf
     cap_add:
-    - SYS_ADMIN
+      - SYS_ADMIN
     security_opt:
-    - apparmor:unconfined
+      - apparmor:unconfined
     devices:
-    - /dev/fuse:/dev/fuse:rwm
+      - /dev/fuse:/dev/fuse:rwm
     depends_on:
-    - debridav
+      - debridav
     command: "mount debridav: /data --allow-other --allow-non-empty --dir-cache-time 0s --poll-interval 5s"
     networks:
-    - mediaserver
+      - mediaserver
   jellyfin-debrid:
     image: lscr.io/linuxserver/jellyfin:latest
     container_name: jellyfin-debrid
     environment:
-    - PUID=1000
-    - PGID=1000
-    - TZ=Europe/Berlin
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
     #- JELLYFIN_PublishedServerUrl=192.168.0.5 #optional
     ports:
-    - 8096:8096
-    - 8920:8920 #optional
-    - 7359:7359/udp #optional
-    - 1900:1900/udp #optional
+      - 8096:8096
+      - 8920:8920 #optional
+      - 7359:7359/udp #optional
+      - 1900:1900/udp #optional
     restart: unless-stopped
     depends_on:
-    - rclone
+      - rclone
     volumes:
-    - /mnt/debridav2:/data:rshared
+      - /mnt/debridav2:/data:rshared
     networks:
-    - mediaserver
+      - mediaserver
   sonarr-debrid:
     image: lscr.io/linuxserver/sonarr:latest
     container_name: sonarr-debrid
     environment:
-    - PUID=1000
-    - PGID=1000
-    - TZ=Europe/Berlin
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
     volumes:
-    - /home/william/mediaserver/sonarr/data:/config
-    - /mnt/debridav2:/data:rshared
-    - /mnt/debridav2/tv:/tv:rshared
+      - /debridav/sonarr/data:/config
+      - /mnt/debridav2/:/data:rshared
     ports:
-    - 8990:8989
+      - 8990:8989
     depends_on:
-    - rclone
+      - rclone
     restart: unless-stopped
     networks:
-    - mediaserver
+      - mediaserver
+  radarr-debrid:
+    image: lscr.io/linuxserver/radarr:latest
+    container_name: radarr-debrid
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
+    volumes:
+      - /debridav/radarr/data:/config
+      - /mnt/debridav2/:/data:rshared
+    ports:
+      - 7878:7878
+    depends_on:
+      - rclone
+    restart: unless-stopped
+    networks:
+      - mediaserver
   prowlarr-debrid:
     image: lscr.io/linuxserver/prowlarr:latest
     container_name: prowlarr-debrid
     environment:
-    - PUID=1000
-    - PGID=1000
-    - TZ=Europe/Berlin
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
     volumes:
-    - /home/william/mediaserver/media/:/config
+      - /home/william/mediaserver/config/prowlarr:/config
+      - ./prowlarr/definitions/:/config/Definitions/Custom
     ports:
-    - 9696:9696
+      - 9696:9696
     restart: unless-stopped
     networks:
-    - mediaserver
+      - mediaserver
+  jellyseerr:
+    image: fallenbagel/jellyseerr:latest
+    container_name: jellyseerr
+    environment:
+      - LOG_LEVEL=debug
+      - TZ=Asia/Tashkent
+    ports:
+      - 5055:5055
+    volumes:
+      - /debridav/jellyseer/config:/app/config
+      - /mnt/debridav2/:/data:rshared
+    restart: unless-stopped
+    networks:
+      - mediaserver
 networks:
   mediaserver:
 
