--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - H2_FILE_PATH=/debridav/h2data
       - DEBRIDAV_LOCAL_FILE_PATH=/debridav
       - DEBRIDAV_QBITTORRENT_DOWNLOADDIR=/data/downloads
+      - DEBRID_CLIENT=realdebrid
     ports:
       - 8888:8080
     networks:
@@ -55,6 +56,7 @@ services:
       - rclone
     volumes:
       - /mnt/debridav2:/data:rshared
+      - /debridav/jellyfin/data:/config
     networks:
       - mediaserver
   sonarr-debrid:
