--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ premiumize.baseurl=https://www.premiumize.me/api/
 #spring.datasource.username=william
 #spring.datasource.password=ferdi
 #spring.datasource.host=localhost
-debridav.debridclient=realdebrid
+debridav.debridclient=premiumize
 realdebrid.apikey=XLY73JVIYVSJKQHCZ24F2NFGD5LKGGV3XPAV4PQNM34JID4M7OLQ
 realdebrid.baseurl=https://api.real-debrid.com/rest/1.0/
