--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - H2_FILE_PATH=/debridav/h2data
       - DEBRIDAV_LOCAL_FILE_PATH=/debridav
       - DEBRIDAV_QBITTORRENT_DOWNLOADDIR=/data/downloads
-      - debridav.debridclient=realdebrid
+      - DEBRIDAV_DEBRIDCLIENT=realdebrid
     ports:
       - 8888:8080
     networks:
@@ -42,7 +42,6 @@ services:
   jellyfin-debrid:
     image: lscr.io/linuxserver/jellyfin:latest
     container_name: jellyfin-debrid
-    restart: unless-stopped
     environment:
       - PUID=1000
       - PGID=1000
