--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-logging.level.web=debug
+logging.level.web=info
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 debriDav.local.file.path=/tmp/debridavtests
