--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.servlet.multipart.max-request-size=10MB
 debriDav.local.file.path=/tmp/debridavlocal
 debriDav.local.download.path=/downloads
 debridav.h2.file-path=file:/${debriDav.local.file.path}/db5
-debridav.qbittorrent.downloaddir=/mnt/localdav/downloads
+debridav.mountPath=/data
 debridav.cache.local.debridfiles.threshold.mb=2
 spring.datasource.url=jdbc:h2:${debridav.h2.file-path}
 spring.h2.console.enabled=true
-premiumize.apikey=re8stt9uhcmnxxbf
+premiumize.apikey=derqaisihmkdns9k
 premiumize.baseurl=https://www.premiumize.me/api/
 #spring.datasource.url=jdbc:postgresql://localhost:5432/debrid
 #spring.datasource.username=william
