--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,19 +4,25 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.web=debug
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-debriDav.local.file.path=/tmp/debridavlocal
-debriDav.local.download.path=/downloads
-debridav.h2.file-path=file:/${debriDav.local.file.path}/db5
+
+debridav.file-path=/tmp/debridavlocal
+debridav.download-path=/downloads
+debridav.h2.file-path=file:/${debriDav.file-path}/db5
 debridav.mountPath=/data
-debridav.cache.local.debridfiles.threshold.mb=2
+debridav.cache-local-debrid-files-threshold.mb=2
+debridav.debridclient=realdebrid
+
 spring.datasource.url=jdbc:h2:${debridav.h2.file-path}
 spring.h2.console.enabled=true
-premiumize.apikey=derqaisihmkdns9k
-premiumize.baseurl=https://www.premiumize.me/api/
+
+premiumize.api-key=derqaisihmkdns9k
+premiumize.bas-eurl=https://www.premiumize.me/api/
+
+real-debrid.api-key=XLY73JVIYVSJKQHCZ24F2NFGD5LKGGV3XPAV4PQNM34JID4M7OLQ
+real-debrid.base-url=https://api.real-debrid.com/rest/1.0/
+
 #spring.datasource.url=jdbc:postgresql://localhost:5432/debrid
 #spring.datasource.username=william
 #spring.datasource.password=ferdi
 #spring.datasource.host=localhost
-debridav.debridclient=realdebrid
-realdebrid.apikey=XLY73JVIYVSJKQHCZ24F2NFGD5LKGGV3XPAV4PQNM34JID4M7OLQ
-realdebrid.baseurl=https://api.real-debrid.com/rest/1.0/
+
