--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,20 +1,23 @@
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-logging.level.web=info
+logging.level.web=debug
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-debriDav.local.file.path=/tmp/debridavtests
-debriDav.local.download.path=/downloads
-debridav.h2.file-path=file:/${debriDav.local.file.path}/db4
-debridav.mountpath=/data
-debridav.cache.local.debridfiles.threshold.mb=2
+
+debridav.file-path=/tmp/debridavtests
+debridav.download-path=/downloads
+debridav.h2.file-path=file:/${debridav.file-path}/db4
+debridav.mountPath=/data
+debridav.cache-local-debrid-files-threshold=2
+debridav.debridclient=premiumize
+
 spring.datasource.url=jdbc:h2:${debridav.h2.file-path}
 spring.h2.console.enabled=true
-premiumize.apikey=asd
-#premiumize.baseurl=localhost
-#spring.datasource.url=jdbc:postgresql://localhost:5432/debrid
-#spring.datasource.username=william
-#spring.datasource.password=ferdi
-#spring.datasource.host=localhost
+
+premiumize.api-key=asd
+premiumize.bas-eurl=https://www.premiumize.me/api/
+
+real-debrid.api-key=asd
+real-debrid.base-url=https://api.real-debrid.com/rest/1.0/
 
