--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,19 +7,19 @@ spring.servlet.multipart.max-request-size=10MB
 
 debridav.file-path=/tmp/debridavlocal
 debridav.download-path=/downloads
-debridav.h2.file-path=file:/${debriDav.file-path}/db5
+debridav.h2.file-path=file:/${debridav.file-path}/db5
 debridav.mountPath=/data
-debridav.cache-local-debrid-files-threshold.mb=2
-debridav.debridclient=realdebrid
+debridav.cache-local-debrid-files-threshold-mb=2
+debridav.debrid-clients=real_debrid,premiumize
 
 spring.datasource.url=jdbc:h2:${debridav.h2.file-path}
 spring.h2.console.enabled=true
 
 premiumize.api-key=derqaisihmkdns9k
-premiumize.bas-eurl=https://www.premiumize.me/api/
+premiumize.bas-eurl=https://www.premiumize.me/api
 
 real-debrid.api-key=XLY73JVIYVSJKQHCZ24F2NFGD5LKGGV3XPAV4PQNM34JID4M7OLQ
-real-debrid.base-url=https://api.real-debrid.com/rest/1.0/
+real-debrid.base-url=https://api.real-debrid.com/rest/1.0
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/debrid
 #spring.datasource.username=william
