--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,8 +9,8 @@ debridav.file-path=/tmp/debridavtests
 debridav.download-path=/downloads
 debridav.h2.file-path=file:/${debridav.file-path}/db4
 debridav.mountPath=/data
-debridav.cache-local-debrid-files-threshold=2
-debridav.debridclient=premiumize
+debridav.cache-local-debrid-files-threshold-mb=2
+debridav.debrid-clients=premiumize,real_debrid
 
 spring.datasource.url=jdbc:h2:${debridav.h2.file-path}
 spring.h2.console.enabled=true
