--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -24,4 +24,4 @@ premiumize.api-key=asd
 premiumize.bas-eurl=https://www.premiumize.me/api/
 real-debrid.api-key=asd
 real-debrid.base-url=https://api.real-debrid.com/rest/1.0/
-#debridav_i.understand.that.by.using.real.debrid.i.am.publicly.sharing.what.i.stream=false
+debridav.torrent-lifetime=1h
