--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   debridav:
-    image: ghcr.io/skjaere/debridav
+    image: ghcr.io/skjaere/debridav:latest
     container_name: debridav
     restart: unless-stopped
     environment:
