fix: adding default torrent lifetime

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,6 @@ premiumize.bas-eurl=https://www.premiumize.me/api
 real-debrid.api-key=
 real-debrid.base-url=https://api.real-debrid.com/rest/1.0
 logging.level.io.milton.http.*=error
-#debridav_i.understand.that.by.using.real.debrid.i.am.publicly.sharing.what.i.stream=false
+debridav.torrent-lifetime=1d
 
 
