fix: Improving DebridClient interface to allow for fewer api calls when refreshing links

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,6 @@ real-debrid.api-key=
 real-debrid.base-url=https://api.real-debrid.com/rest/1.0
 logging.level.io.milton.http.*=error
 debridav.torrent-lifetime=1d
+debridav.wait-before-start-stream=150ms
 
 
