--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -25,3 +25,4 @@ premiumize.bas-eurl=https://www.premiumize.me/api/
 real-debrid.api-key=asd
 real-debrid.base-url=https://api.real-debrid.com/rest/1.0/
 debridav.torrent-lifetime=1h
+debridav.wait-before-start-stream=150ms
