--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,8 @@ real-debrid.base-url=https://api.real-debrid.com/rest/1.0
 logging.level.io.milton.http.*=error
 debridav.torrent-lifetime=1d
 debridav.wait-before-start-stream=150ms
+torbox.version=v1
+torbox.base-url=https://api.torbox.app
+torbox.api-key=
 
 
