--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -26,3 +26,6 @@ real-debrid.api-key=asd
 real-debrid.base-url=https://api.real-debrid.com/rest/1.0/
 debridav.torrent-lifetime=1h
 debridav.wait-before-start-stream=150ms
+torbox.version=v1
+torbox.base-url=https://api.torbox.app
+torbox.api-key=asd
