--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,8 @@ debridav.wait-before-start-stream=150ms
 torbox.version=v1
 torbox.base-url=https://api.torbox.app
 torbox.api-key=
+server.tomcat.accesslog.enabled=true
+spring.jsonrpc.path=jsonprc
+spring.jsonrpc.base-package=io.skjaere.debridav.sabnzbd
 
 
