--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -8,19 +8,19 @@ services:
       PUID: 1000
       PGID: 1000
     volumes:
-    - /home/william/debridav:/data:rshared
-    - ./rclone.conf:/config/rclone/rclone.conf
+      - /home/william/debridav:/data:rshared
+      - ./rclone.conf:/config/rclone/rclone.conf
     cap_add:
-    - SYS_ADMIN
+      - SYS_ADMIN
     security_opt:
-    - apparmor:unconfined
+      - apparmor:unconfined
     devices:
-    - /dev/fuse:/dev/fuse:rwm
+      - /dev/fuse:/dev/fuse:rwm
     command: "rcd --rc-web-gui --rc-addr :5572 --rc-user w --rc-pass f"
     ports:
-    - "5572:5572"
+      - "5572:5572"
     networks:
-    - mediaserver
+      - mediaserver
   sonarr-debrid:
     image: lscr.io/linuxserver/sonarr:latest
     container_name: sonarr-debrid-dev
@@ -53,6 +53,19 @@ services:
     restart: unless-stopped
     networks:
       - mediaserver
+  sabnzbd:
+    image: lscr.io/linuxserver/sabnzbd:latest
+    container_name: sabnzbd
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+    volumes:
+      - .sabnzbd/config:/config
+      - ./sabnzbd-downloads:/downloads #optional
+    ports:
+      - 8081:8080
+    restart: unless-stopped
 networks:
   mediaserver:
 
