--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 debridav.file-path=${user.dir}/dev/debridav-files
 debridav.download-path=/downloads
-debridav.h2.file-path=file:/${debridav.file-path}/lb-db
+debridav.h2.file-path=file:/${debridav.file-path}/lb-dbb
 debridav.mount-path=/data
 debridav.cache-local-debrid-files-threshold-mb=2
 debridav.debrid-clients=premiumize,real_debrid
